--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "name": "Mediola to MQTT",
-    "version": "0.3.15ro",
+    "version": "0.3.15sa",
     "slug": "mediola2mqtt",
-    "description": "Homeassistant interface to Mediola AIO Gateway v4/v4+",
+    "description": "Homeassistant interface to Mediola AIO Gateway v4(+)/v5(+)/v6(+)",
     "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
     "startup": "application",
     "init": false,
