--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Mediola to MQTT",
-    "version": "0.4.0sa",
+    "version": "0.4.1",
     "slug": "mediola2mqtt",
     "description": "Homeassistant interface to Mediola AIO Gateway v4/v4+/v5/v5+/v6/v6+",
     "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
